pagina-layout-marcacao

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,13 +13,52 @@
 </head>
 <body>
 
+    <!-- cabeçalho -->
     <header>
+        <!-- section para o cabeçalho -->
+        <section class="container-header">
+            <!-- container para a imagem do header -->
+            <div class="container-header__img">
+                <figure>
+                    <img src="" alt="">
+                </figure>
+            </div>
 
+            <!-- container para o ícone de usuário -->
+            <div class="container-header__icone">
+
+            </div>
+
+            <!-- container para o menu sanduíche -->
+            <div class="container-header__menu">
+                <h2>MENU</h2>
+                <!-- código do menu -->
+                <div class="header-container__menu--itens">
+                    <nav>
+                        <div class="menu-toggle">
+                            <div class="menu-bar"></div>
+                            <div class="menu-bar"></div>
+                            <div class="menu-bar"></div>
+                        </div>
+                        <ul class="header-container__menu__itens">
+                            <!-- fazendo o link com as funções determinadas no arquivo principal .py -->
+                            <li><a href="/login">Cadastre-se</a></li>
+                            <li><a href="/cadastramento">Cadastramento de produtos</a></li>
+                            <li><a href="/estoque">Controle de Estoque</a></li>
+                            <li><a href="/expedicao">Expedição</a></li>
+                            <li><a href="/picking">Picking</a></li>
+                            <li><a href="/pop">POP</a></li>
+                            <li><a href="/rnc">RNC</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </section>
     </header>
 
-
+    <!-- rodapé -->
     <footer>
-
+        <p>&copy; 2024 LogClass Sistema Educacional</p>
     </footer>
     
 </body>
