--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -1,5 +1,5 @@
 {% block css %}
-<link rel="stylesheet" href="/static/layout.css">
+<link rel="stylesheet" href="/static/pagina-inicial.css">
 {% endblock %}
 
 
@@ -7,5 +7,8 @@
 {% block conteudo %}
 
 <!-- CONTEUDO DO SITE -->
+
+
+
 
 {% endblock %}
