--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -13,19 +13,66 @@
             <span class="part1">LOG</span>
             <span class="part2">LOGÍSTICA</span>
         </div>
-    
+
         <div class="container-grid"></div>
     
     </section>
     
     <section class="container-cards">
-        <div class="grid-container">
-            <div class="grid-item"></div>
-            <div class="grid-item"></div>
-            <div class="grid-item"></div>
-            <div class="grid-item"></div>
-            <div class="grid-item"></div>
-        </div>
+        <div class="c-galeria">
+
+            <div class="servicos">
+                <figure><img src="https://images.pexels.com/photos/6207369/pexels-photo-6207369.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Processo de cadastramento"></figure>
+                <div class="descricao">
+                    <h2> Processo de Cadastramento </h2>
+                    <br>
+                    <br>
+                    <div class="butn">
+                        <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                    </div>
+                </div>
+            </div>
+
+
+                <div class="servicos">
+                    <figure><img src="https://images.pexels.com/photos/4506249/pexels-photo-4506249.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Não conformidade"></figure>
+                    <div class="descricao">
+                        <h2> Registro de Não conformidade(RNC) </h2>
+                        <br>
+                        <br>
+                        <div class="butn">
+                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="servicos">
+                    <figure><img src="https://images.pexels.com/photos/6169025/pexels-photo-6169025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Picking"></figure>
+                    <div class="descricao">
+                        <h2>Cadastro de PICKING</h2>
+                        <br>
+                        <br>
+                        <div class="butn">
+                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                        </div>
+                    </div>
+                </div>
+                
+        
+                <div class="servicos">
+                    <figure><img src="https://images.pexels.com/photos/4277794/pexels-photo-4277794.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2 alt="Estoque"></figure>
+                    <div class="descricao">
+                        <h2> Controle de Estoque  </h2>
+                        <br>
+                        <br>
+                        <div class="butn">
+                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                        </div>
+                    </div>
+                </div>
+     </div>  
+
     </section>
 </section>
 
