--- a/static/pagina-inicial.css
+++ b/static/pagina-inicial.css
@@ -63,10 +63,14 @@ body, html {
 .c-galeria{
     
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  grid-auto-rows: 200px;
+  grid-column-gap: 10px;
+  grid-row-gap: 6.5rem;
   align-items: center;
   margin-bottom: 15rem;
-  margin-top: 5rem;
+  margin-top: 10rem;
   text-align: center;
   /*DEFINE O TAMANHO DO EFEITO NA IMAGEM QUANDO O MOUSE É PASSADO*/
   flex: 2 5 10px;
@@ -85,13 +89,13 @@ body, html {
   overflow: hidden;
   display: flex;
   /*MARGEM EXTERNA*/
-  margin: 0.5rem;
+  margin: 5.5rem;
   /*FLUTUAR*/
   float: left;
   /*LARGURA DO CARD.*/
-  width: 30%;
+  width: 70%;
   /*COR DE FUNDO DO CARD*/
-  height: 100%;
+  height: 130%;
   /*COR DA FONTE*/
   color: black;
   /*CENTRALIZA O TEXTO*/
@@ -99,26 +103,23 @@ body, html {
   /*SUAVIZAR EFEITO DA TRANSIÇÃO*/
   transition: transform 0.5s;
   flex-direction: column;
-
 }
 
 .servicos img{
-
   /*AJUSTAR A IMAGEM DE ACORDO COM A LARGURA DO CARD*/
   width: 100%;
   /*ALTURA AUTOMATICA DA IMAGEM*/
-  height: 35rem;
+  height: 20rem;
   object-fit: cover;
   filter: brightness(80%);/*DEIXA A IMAGEM MAIS ESCURA, MAIS CINZA*/
-  padding: 3rem;
+  padding: 2rem;
 }
 
 
 .servicos img:hover{
+  margin-top: 2rem;
   /*NOS PERMITE DAR O EFEITO DE ZOOM E OU PERSPECTIVA*/
   transform: scale(1.1);
-  /*DEFINE O TAMANHO DO EFEITO NA IMAGEM QUANDO O MOUSE É PASSADO*/
-  flex: 3;
 }
 
 .descricao{
@@ -126,11 +127,11 @@ body, html {
   /*DEIXA A DESCRICAO ABAIXO DA IMAGEM*/
   top:100%; 
   height: 100%;
-  padding: 10px;
+  padding: 3px;
   box-sizing: border-box;
   transition: top 0.3s;
   font-size: 1rem;
-  padding-top: 5rem;
+  padding-top: 2rem;
 }
 
 .servicos:hover .descricao{
@@ -139,6 +140,7 @@ body, html {
   background-color:  rgba(83, 103, 156, 0.292);
   /*AUMENTAR O TAMANHO DA IMAGEM*/
   transform: scale(1.1);
+  width: 100%;
 }
 
 .descricao h2{
