--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -37,7 +37,7 @@
                 <div class="servicos">
                     <figure><img src="https://images.pexels.com/photos/4506249/pexels-photo-4506249.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Não conformidade"></figure>
                     <div class="descricao">
-                        <h2> Registro de Não conformidade(RNC) </h2>
+                        <h2> Registro de<br> Não <br> conformidade<br>(RNC) </h2>
                         <br>
                         <br>
                         <div class="butn">
@@ -50,7 +50,7 @@
                 <div class="servicos">
                     <figure><img src="https://images.pexels.com/photos/6169025/pexels-photo-6169025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Picking"></figure>
                     <div class="descricao">
-                        <h2>Cadastro de PICKING</h2>
+                        <h2>Cadastro de<br> PICKING</h2>
                         <br>
                         <br>
                         <div class="butn">
@@ -71,6 +71,32 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="servicos">
+                    <figure><img src="https://images.pexels.com/photos/6787050/pexels-photo-6787050.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="pop"></figure>
+                    <div class="descricao">
+                        <h2> POP <br> (Procedimento operacional <br> padrão)  </h2>
+                        <br>
+                        <br>
+                        <div class="butn">
+                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="servicos">
+                    <figure><img src="https://images.pexels.com/photos/6646863/pexels-photo-6646863.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="expedicao"></figure>
+                    <div class="descricao">
+                        <h2> Cadastro de Expedição
+                        </h2>
+                        <br>
+                        <br>
+                        <div class="butn">
+                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                        </div>
+                    </div>
+                </div>
+
      </div>  
 
     </section>
