Conflitos e novas estilizações-06.09

--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -8,24 +8,28 @@
 
 <section class="container-geral">
     <section class="container-principal">
+
         <div class="titulo-destaque">
             <span class="part1">LOG</span>
             <span class="part2">LOGÍSTICA</span>
         </div>
+
         <div class="container-grid"></div>
+    
     </section>
     
     <section class="container-cards">
+        <div class="c-galeria">
 
-        <div class="container-carrossel">
-
-            <div class="carrossel">
-                <figure>
-                    <img src="https://images.pexels.com/photos/6207368/pexels-photo-6207368.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cadastramento">
-                </figure>
+            <div class="servicos">
+                <figure><img src="https://images.pexels.com/photos/6207369/pexels-photo-6207369.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Processo de cadastramento"></figure>
                 <div class="descricao">
-                    <h2>Processo de Cadastramento</h2>
-                    <a href="#">Acessar</a>
+                    <h2> Processo de Cadastramento </h2>
+                    <br>
+                    <br>
+                    <div class="butn">
+                        <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                    </div>
                 </div>
             </div>
 
@@ -95,18 +99,8 @@
 
      </div>  
 
-
-           
-
-
-          <button class="anterior">&#10094;</button>
-          <button class="próximo">&#10095;</button>
-
-        </div>
     </section>
 </section>
-
-<script src="/static/js/carrossel.js"></script>
 
 
 {% endblock %}
