--- a/static/pagina-inicial.css
+++ b/static/pagina-inicial.css
@@ -3,14 +3,15 @@ body, html {
   padding: 0;
   height: 100vh;
   font-family: Arial, sans-serif;
-  overflow-x: hidden;
+  
+  
 }
 
-.container-geral {
+.container-geral{
   background: linear-gradient(#f4f4f4, #f4f4f4, #004aad, #000000);
 }
 
-.container-principal {
+.container-principal{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -46,14 +47,16 @@ body, html {
   border-radius: 2.5rem;
 }
 
-.container-cards {
+.container-cards{
   height: 100vh;
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: 100%;
   margin-top: 0.5rem;
-  overflow: hidden;
+  /*DEFINE OS ESPAÇOS ENTRE AS LINHAS E COLUNAS*/
+  gap: 1;
 }
 
 /*AQUI COMEÇA A GALERIA*/
@@ -127,7 +130,6 @@ body, html {
   padding: 3px;
   box-sizing: border-box;
   transition: top 0.3s;
-  text-align: center;
   font-size: 1rem;
   padding-top: 2rem;
 }
@@ -144,35 +146,31 @@ body, html {
 .descricao h2{
   font-family: 'Courier New', Courier, monospace;
   /*DEFINE O TAMANHO DA FONTE*/
-  font-size: 1.5rem;
-  color: white;
-  margin: 3rem;
-}
-
-.descricao a{
+  font-size: 2rem;
   color: white;
 }
 
+.butn-c-servicos{
 
-.anterior,
-.próximo {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  border: none;
-  background: transparent;
-  font-size: 24px;
-  color: #ffffff;
+  font-family: 'Courier New', Courier, monospace;
+  width:15rem;
+  height: 3rem;
+  transition: 1.5s;
+  /*QUANDO PASSAR O MOUSE NO BOTÃO MUDO O FORMATO DO PONTEIRO DO MESMO*/
   cursor: pointer;
+  background-color: transparent;
+  border: 0.1rem solid #fff;
+  color: #fff;
+  /*TRANSFORMA O TEXTO EM LETRA MAÍUSCULA*/
+  text-transform: uppercase;
+  border-radius: 2.5rem;
 }
 
-.anterior {
-  left: 0;
+.butn-c-servicos h2{
+  font-size: 1rem;
 }
 
-.próximo {
-  right: 0;
-}
+
 
 
 
