--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,12 @@
     <title>LogClass</title>
      <!-- importando o arquivo css da página -->
      <link rel="stylesheet" href="/static/layout.css">
+     <link rel="stylesheet" href="/static/menu-home/menu-home.css">
+
+
+
+     <script src="/static/js/menu.js" defer></script>
+
 
      {% block css %}
      {% endblock %}
@@ -15,47 +21,11 @@
 </head>
 <body>
 
-    <!-- cabeçalho -->
+    <!-- Cabeçalho -->
     <header>
-        <!-- section para o cabeçalho -->
-        <section class="header-container">
-            <!-- container para a imagem do header -->
-            <div class="header-container__logo">
-                <figure>
-                    <img src="/static/img/Blue Modern Shipping Package Box Logo.svg" alt="Logo">
-                </figure>
-            </div>
 
-            <!-- container para o ícone de usuário -->
-            <div class="container-header__icone">
+        <div class="container-menu" id="container-menu"></div>
 
-            </div>
-
-            <!-- container para o menu sanduíche -->
-            <div class="header-container__menu">
-                <h2>MENU</h2>
-                <!-- código do menu -->
-                <div class="header-container__menu--itens">
-                    <nav>
-                        <div class="menu-toggle">
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                        </div>
-                        <ul class="header-container__menu__itens">
-                            <!-- fazendo o link com as funções determinadas no arquivo principal .py -->
-                            <li><a href="/login">Cadastre-se</a></li>
-                            <li><a href="/cadastramento">Cadastramento de produtos</a></li>
-                            <li><a href="/estoque">Controle de Estoque</a></li>
-                            <li><a href="/expedicao">Expedição</a></li>
-                            <li><a href="/picking">Picking</a></li>
-                            <li><a href="/pop">POP</a></li>
-                            <li><a href="/rnc">RNC</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </section>
     </header>
 
     {% block conteudo %}
