--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -100,6 +100,18 @@
      </div>  
 
     </section>
+
+
+    <section class="container-mensagem_professor">
+
+        <div class="mensagem">
+
+            <h2> Mensagem do Professor </h2>
+            <!-- Campo "Mensagem" -->
+            <input type="text" placeholder="Mensagem do Professor" class="input-field">
+        </div>
+
+    </section>
 </section>
 
 
