--- a/static/layout.css
+++ b/static/layout.css
@@ -11,75 +11,18 @@
 
 
 /* ****************************** padronização/ estilização MENU ************************************ */
-.header-container{
-    width: 100vw;
-    height: 10vh;
-    background-color: #f4f4f4;
+
+.container-menu{
+    box-sizing: border-box;
+    height: 10rem;
+    padding: 2rem;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    color: #E8D3B6;
-    gap: 2rem;
-    position: fixed;
-    left: 0;
-    z-index: 1;
-    
+    justify-content: space-around;
+    gap: 8rem;
+    background-color: #f4f4f4;
 }
 
-.header-container img{
-    max-width: 6rem;
-    max-height: 8rem;
-    border-radius: 100%;
-}
-
-.header-container__menu {
-    margin-right: 1rem;
-    gap: 2rem;
-    display: flex;
-    color: #0e00cd;
-    opacity: 0.9;
-}
-.header-container__menu nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: none;
-}
-
-.header-container__menu nav ul.show {
-    display: block;
-    margin-top: 0;
-}
-
-.header-container__menu nav ul li {
-    padding: 10px 20px;
-}
-
-.header-container__menu nav ul li a {
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 1rem;
-}
-
-.header-container__menu__itens{
-    cursor: pointer;
-}
-
-.menu-toggle {
-    cursor: pointer;
-}
-
-.menu-toggle.show {
-    cursor: pointer;
-    margin-top: 50px;
-}
-
-.menu-bar {
-    width: 25px;
-    height: 3px;
-    background-color: #00109f;
-    margin: 0.25rem;
-}
 
 /* ****************************** padronização/ estilização RODAPÉ ************************************ */
 footer{
