--- a/static/pagina-inicial.css
+++ b/static/pagina-inicial.css
@@ -131,7 +131,7 @@ body, html {
   box-sizing: border-box;
   transition: top 0.3s;
   font-size: 1rem;
-  padding-top: 2rem;
+  margin-top: 1rem;
 }
 
 .servicos:hover .descricao{
@@ -148,13 +148,15 @@ body, html {
   /*DEFINE O TAMANHO DA FONTE*/
   font-size: 2rem;
   color: white;
+  margin-top: 0.5rem;
+ 
 }
 
 .butn-c-servicos{
 
   font-family: 'Courier New', Courier, monospace;
-  width:15rem;
-  height: 3rem;
+  width:10rem;
+  height:2rem;
   transition: 1.5s;
   /*QUANDO PASSAR O MOUSE NO BOTÃO MUDO O FORMATO DO PONTEIRO DO MESMO*/
   cursor: pointer;
@@ -170,6 +172,37 @@ body, html {
   font-size: 1rem;
 }
 
+.container-mensagem_professor{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+}
+
+.mensagem{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.mensagem h2{
+  color: white;
+  font-size: 50;
+}
+
+.mensagem input{
+  width: 100%;
+  height: 15rem;
+  margin-top: 3rem;
+  text-align: center;
+  border-radius: 2rem;
+  background-color:#87b7ff ;
+  color: #fff;
+}
 
 
 
