--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,96 @@
+{% extends "layout.html" %}
 {% block css %}
-<link rel="stylesheet" href="/static/layout.css">
+<link rel="stylesheet" href="/static/login.css">
 {% endblock %}
 
 
-{% extends "layout.html" %}
 {% block conteudo %}
 
+<div class="container" id="intro-section">
+    <div class="header">
+        <h2 id="logo-h2">BEM-VINDO AO LOG CLASS</h2>
+        <img src="/static/img/logo.png" alt="Logo" class="logo-image">
+    </div>
+
+    <div class="login-prompt">
+        <h3 class="login-question">Ainda não possui cadastro?</h3>
+        <button class="signup-btn" id="signup-btn">CADASTRE-SE AQUI!</button>
+        <button class="login-btn" id="login-btn">IR PARA LOGIN</button>
+    </div>
+</div>
+
+<!-- ---------------------------------------------------------------------------------------------------------------------- -->
+
+<!-- Seções de login escondidas inicialmente -->
+<div class="container" id="login-section" style="display: none;">
+    <div class="login-box" id="login-aluno">
+        <h2>Cadastro do Aluno</h2>
+        <form>
+            <input type="email" placeholder="E-MAIL" required>
+            <input type="password" placeholder="SENHA" required>
+            <div class="select-menu">
+                <div class="select-btn">
+                    <span class="sBtn-text">Turma</span>
+                    <i class="bx bx-chevron-down"></i>
+                </div>
+                <ul class="options">
+                    <li class="option">
+                        <span class="option-text">Turma 1</span>
+                    </li>
+                    <li class="option">
+                        <span class="option-text">Turma 2</span>
+                    </li>
+                    <li class="option">
+                        <span class="option-text">Turma 3</span>
+                    </li>
+                </ul>
+            </div>
+            <a href="#" id="voltar-aluno" class="signup-link">VOLTAR</a>
+            <!-- <i class="fa-solid fa-turn-down-left">Voltar</i> NÃO ESQUECER DE CORRIGIR -->
+            <button type="submit">IR</button>
+        </form>
+    </div>
+
+    <div class="login-box" id="login-professor" style="display: none;">
+        <h2>Cadastro do Professor</h2>
+        <form>
+            <input type="email" placeholder="E-mail" required>
+            <input type="password" placeholder="Senha" required>
+            <input type="password" placeholder="Repetir senha" required>
+            <input type="text" placeholder="Código de Acesso" required>
+            <a href="#" id="voltar-professor" class="signup-link">VOLTAR</a>
+            <button type="submit">IR</button>
+        </form>
+    </div>
+
+    <!-- ---------------------------------------------------------------------------------------------------------------- -->
+
+
+    <!-- Seção de Login para quem já possui conta -->
+    <div class="container" id="login-existente-section" style="display: none;">
+        <div class="login-box" id="login-existente-box">
+            <h2>Login do Aluno</h2>
+            <form>
+                <input type="email" id="email-login" placeholder="E-MAIL" required>
+                <input type="password" id="senha-login" placeholder="SENHA" required>
+                <button type="submit" id="login-existente-btn">ENTRAR</button>
+            </form>
+            <a href="#" id="voltar-login-existente-link" class="signup-link">VOLTAR</a>
+        </div>
+    </div>
+
+
+    <!-- ----------------------------------------------------------------------------------------------------------------- -->
+
+    <div class="connect-box">
+        <h2>CONECTE-SE</h2>
+        <p>Selecione seu tipo de conta.</p>
+        <button class="account-type" id="aluno-btn">ALUNO</button>
+        <button class="account-type" id="professor-btn">PROFESSOR</button>
+    </div>
+</div>
+
+<script src="/teste.js"></script>
 
 
 <!-- CONTEUDO DO SITE -->
