--- a/templates/login.html
+++ b/templates/login.html
@@ -90,7 +90,7 @@
     </div>
 </div>
 
-<script src="/teste.js"></script>
+<script src="/static/js/teste.js"></script>
 
 
 <!-- CONTEUDO DO SITE -->
