--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% block css %}
-<link rel="stylesheet" href="/static/layout.css">
+<link rel="stylesheet" href="/static/styles/layout.css">
 {% endblock %}
 
 
