--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -1,6 +1,6 @@
 <!-- EXTENDENDO O CSS DA PAGINA PRINCIPAL (LAYOUT) -->
 {% block css %}
-    <link rel="stylesheet" href="/static/pagina-inicial.css">
+    <link rel="stylesheet" href="/static/styles/pagina-inicial.css">
 {% endblock %}
 
 {% extends "layout.html" %}
