--- a/templates/login.html
+++ b/templates/login.html
@@ -28,32 +28,15 @@
         <form action="/login" method="POST">
             <input type="hidden" value="Aluno" name="tipo">
             <input type="name" placeholder="Nome" required name="nome">
-            <input type="email" placeholder="E-MAIL" required name="email">
-            <input type="password" placeholder="SENHA" required name="senha">
-            <div class="select-menu">
-                <div class="select-btn">
-                    <span class="sBtn-text">Turma</span>
-                    <i class="bx bx-chevron-down"></i>
-                </div>
-                <input list="browsers" name="turma">
-                <datalist id="browsers">
-                    <option value="turma1"></option>
-                    <option value="turma2"></option>
-                    <option value="turma3"></option>
-                </datalist>
+            <input type="email" placeholder="E-mail" required name="email">
+            <input type="password" placeholder="Senha" required name="senha">
+            <input list="browsers" name="turma" placeholder="Turma">
+            <datalist id="browsers">
+                <option value="turma1"></option>
+                <option value="turma2"></option>
+                <option value="turma3"></option>
+            </datalist>
 
-                <!-- <ul class="options">
-                    <li class="option">
-                        <span class="option-text">turma1</span>
-                    </li>
-                    <li class="option">
-                        <span class="option-text">turma2</span>
-                    </li>
-                    <li class="option">
-                        <span class="option-text">turma3</span>
-                    </li>
-                </ul> -->
-            </div>
             <a href="#" id="voltar-aluno" class="signup-link">VOLTAR</a>
             <!-- <i class="fa-solid fa-turn-down-left">Voltar</i> NÃO ESQUECER DE CORRIGIR -->
             <button type="submit">IR</button>
@@ -97,6 +80,7 @@
         <p>Selecione seu tipo de conta.</p>
         <button class="account-type" id="aluno-btn">ALUNO</button>
         <button class="account-type" id="professor-btn">PROFESSOR</button>
+        <a href="/login" id="voltar-aluno" class="signup-link">VOLTAR</a>
     </div>
 </div>
 
