--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -11,7 +11,7 @@
 
         <div class="titulo-destaque">
             <span class="part1">LOG</span>
-            <span class="part2">LOGÍSTICA</span>
+            <span class="part2">CLASS</span>
         </div>
 
         <div class="container-grid"></div>
@@ -28,7 +28,7 @@
                     <br>
                     <br>
                     <div class="butn">
-                        <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                        <a href="/cadastramento">Acessar</a>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                         <br>
                         <br>
                         <div class="butn">
-                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                            <a href="/rnc">Acessar</a>
                         </div>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                         <br>
                         <br>
                         <div class="butn">
-                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                            <a href="/picking">Acessar</a>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                         <br>
                         <br>
                         <div class="butn">
-                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                            <a href="/estoque">Acessar</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <br>
                         <br>
                         <div class="butn">
-                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                            <a href="/pop">Acessar</a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                         <br>
                         <br>
                         <div class="butn">
-                            <button class="butn-c-servicos"><h2>Acessar</h2></button>
+                            <a href="/expedicao">Acessar</a>
                         </div>
                     </div>
                 </div>
