--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
                   <a href="/">Home</a>
                   <a href="/login">Conecte-se</a>
                   <a href="/cadastramento">Cadastramento</a>
-                  <a href="/rnc">Registro de Não conformidade (RNC)</a>
+                  <a href="/rnc">RNC</a>
                   <a href="/picking">Cadastro de Picking</a>
                   <a href="/estoque">Controle de Estoque</a>
                   <a href="/pop">POP</a>
