--- a/templates/login.html
+++ b/templates/login.html
@@ -84,7 +84,7 @@
     </div>
 </div>
 
-<script src="/static/js/teste.js"></script>
+<script src="/static/js/login.js"></script>
 
 
 <!-- CONTEUDO DO SITE -->
